<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".ArgsActivity">

    <TextView
        android:id="@+id/skip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Skip"
        android:layout_marginStart="330dp"


        />

    <TextView
        android:id="@+id/cliips3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Spiice"
        android:layout_below="@id/skip3"
        android:layout_marginTop="250dp"
        android:textAlignment="center"
        android:textSize="25dp"

        />
    <TextView
        android:id="@+id/iopiop3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:layout_below="@id/cliips3"
        android:layout_marginTop="250dp"
        android:textAlignment="center"
        android:textSize="25dp"



        />
</RelativeLayout>